--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -257,7 +257,7 @@ For further accessibility guidance of text toolbars, see [WAI-ARIAs guidelines](
 
 ## Related
 
-- Button](https://www.carbondesignsystem.com/components/button/usage)
+- [Button](https://www.carbondesignsystem.com/components/button/usage)
 - [Dropdown](https://www.carbondesignsystem.com/components/dropdown/usage#dropdown)
 - [File uploader](https://www.carbondesignsystem.com/components/file-uploader/usage)
 - [Overflow menu](https://www.carbondesignsystem.com/components/overflow-menu/usage)
