update: content fix

--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -81,7 +81,7 @@ The text toolbar provides an efficient way for users to perform several tasks:
 - Create, edit and save simple text files quickly.
 - Edit text with common actions like cut, copy and paste and formatting text styles.
 - Perform basic text search functionality.
-- Attach files or embedding links within text.
+- Attach files or embed links within text.
 
 ## Behaviors
 
@@ -97,7 +97,7 @@ The text toolbar includes a series of basic actions that adopt the [icon button]
 </Column>
 </Row>
 
-The typeface and type size menus adopt the [dropdown](https://www.carbondesignsystem.com/components/dropdown/usage/#dropdown) component style. The user can easily choose any typeface and type size to customize their text.
+The typeface and type size menus adopt the [dropdown](https://www.carbondesignsystem.com/components/dropdown/usage/#dropdown) style. The user can easily choose any typeface and type size to customize their text.
 
 <Row>
 <Column colLg={8}>
