update: content review edits

--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -13,7 +13,7 @@ A text toolbar is a set of buttons and menus that allows users to edit text, sea
 
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Anatomy</AnchorLink>
-<AnchorLink>When to use text toolbars</AnchorLink>
+<AnchorLink>When to use</AnchorLink>
 <AnchorLink>Behaviors</AnchorLink>
 <AnchorLink>Accessibility</AnchorLink>
 <AnchorLink>Related</AnchorLink>
@@ -24,7 +24,9 @@ A text toolbar is a set of buttons and menus that allows users to edit text, sea
 
 ## Overview
 
-A text toolbar is a set of buttons and menus that is grouped horizontally. These controls primarily allow text editing functionality. Formatting actions and style changes can be applied to the editable text within the text area below the text toolbar. Attaching files, embedding links and searching keywords are additional functions a toolbar can have. A text toolbar can be customized by adding or deleting icon buttons based on specific user needs.
+A text toolbar is a set of buttons and menus that is grouped horizontally. These controls primarily allow text editing functionality. Formatting actions and style changes can be applied to the editable text within the text area below the text toolbar. Attaching files, embedding links, and searching keywords are additional functions a toolbar can have.
+
+A text toolbar can be customized by adding or deleting icon buttons based on specific user needs. This pattern illustrates the following options:
 
 <Row>
 <Column colSm={2} colMd={2} colLg={4}>
@@ -67,14 +69,14 @@ A text toolbar is a set of buttons and menus that is grouped horizontally. These
 </Column>
 </Row>
 
-1. **Actions:** Use “Undo” and “Redo” to undo or revert the last change made. Use “Cut”, “Copy” and “Paste” to move pieces of text to another place within the text area, to copy text to the clipboard, or to paste copied text from the clipboard to a different place within the text area.
-2. **Formatting:** Change the typeface, size, style and color of text.
+1. **Actions:** Use “Undo” and “Redo” to undo or revert the last change made. Use “Cut”, “Copy”, and “Paste” to move pieces of text to another place within the text area, to copy text to the clipboard, or to paste copied text from the clipboard to a different place within the text area.
+2. **Formatting:** Change the typeface, size, style, and color of text.
 3. **Paragraph:** Select different alignments and indents for paragraph text and indicate bulleted, checked, or numbered lists.
 4. **Attachment:** Attach files or embed links in strings of text.
 5. **Search:** Search key words within existing paragraphs of text.
 6. **Text area:** Designated area to type editable text.
 
-## When to use text toolbars
+## When to use
 
 The text toolbar provides an efficient way for users to perform several tasks:
 
@@ -90,7 +92,7 @@ The text toolbar provides an efficient way for users to perform several tasks:
 The text toolbar includes a series of basic actions that adopt the [icon button](https://www.carbondesignsystem.com/components/button/usage) style. The action buttons typically have five different states—enabled, hover, focus, active, and disabled.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 ![Text toolbar button states.](/images/text-toolbar-button-states.png)
 
@@ -107,7 +109,7 @@ The typeface and type size menus adopt the [dropdown](https://www.carbondesignsy
 </Column>
 </Row>
 
-The text color and paragraph alignment controls open a menu that display different options to choose from.
+The text color and paragraph alignment controls open a menu that displays different options to choose from.
 
 <Row>
 <Column colLg={8}>
@@ -153,12 +155,12 @@ Enter the html link in the text field and then click the link button to embed th
 
 ### Search
 
-Key words can be searched within the text area.
+Keywords can be searched within the text area.
 
 <Row>
 <Column colLg={8}>
 
-![Searching text key words.](/images/text-toolbar-search-flow.png)
+![Searching text keywords.](/images/text-toolbar-search-flow.png)
 
 </Column>
 </Row>
@@ -166,9 +168,9 @@ Key words can be searched within the text area.
 Matching search results are highlighted in the text area. The number of results found is displayed within a tag in the search bar. The user can clear the search by clicking the close `x` icon inside of the tag. To exit the search, click the close `x` icon in the search field or click anywhere outside of the search bar.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
-![Search key word matches within the text area.](/images/text-toolbar-search-highlight.png)
+![Search keywords matches within the text area.](/images/text-toolbar-search-highlight.png)
 
 </Column>
 </Row>
@@ -178,7 +180,7 @@ Matching search results are highlighted in the text area. The number of results 
 The text toolbar flexes in size to adapt to different breakpoints—max, xlg, lg, md, and sm.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 ![Responsive versions of a text toolbar.](/images/text-toolbar-responsive.png)
 
@@ -190,7 +192,7 @@ The text toolbar flexes in size to adapt to different breakpoints—max, xlg, lg
 | max, xlg   | Displays all controls and functionality in one row with the option to make the search field longer or shorter. |
 | lg         | The search field is truncated into a button or use an overflow menu to display collapsed controls.             |
 | md         | Compresses the full text toolbar into two rows.                                                                |
-| sm         | A compact two row view displaying common editing functionality with collapsed controls in an overflow menu.    |
+| sm         | A more compact version of "md" with collapsed controls in an overflow menu.                                    |
 
 ### Overflow
 
