update: content/image fixes

--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -220,7 +220,7 @@ Text toolbars can be used to save or send text files. Text files can also be sav
 
 ## Accessibility
 
-#### Tooltips
+### Tooltips
 
 Buttons that complete an action upon click receive tooltips on hover.
 
@@ -232,7 +232,7 @@ Buttons that complete an action upon click receive tooltips on hover.
 </Column>
 </Row>
 
-#### Keyboard
+### Keyboard
 
 `Tab` and `Shift + Tab` move focus in and out of the toolbar.
 
@@ -251,7 +251,7 @@ Buttons that complete an action upon click receive tooltips on hover.
 - The `Up Arrow` and `Down Arrow` navigate to different options within a menu.
 - Open and close a menu by pressing `Enter`.
 
-#### Screen readers
+### Screen readers
 
 When a set of controls is visually presented as a group, the `toolbar` role can be used to communicate the presence and purpose of the grouping to screen reader users. Grouping controls into toolbars can also be an effective way of reducing the number of tab stops in the keyboard interface.
 
