--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -26,7 +26,7 @@ A text toolbar is a set of buttons and menus that allows users to edit text, sea
 
 A text toolbar is a set of buttons and menus that is grouped horizontally. These controls primarily allow text editing functionality. Formatting actions and style changes can be applied to the editable text within the text area below the text toolbar. Attaching files, embedding links, and searching keywords are additional functions a toolbar can have.
 
-A text toolbar can be customized by adding or deleting icon buttons based on specific user needs. This pattern illustrates the following options:
+A text toolbar can be customized by adding or removing icon buttons based on specific user needs. This pattern illustrates the following options:
 
 <Row>
 <Column colSm={2} colMd={2} colLg={4}>
@@ -211,7 +211,7 @@ The overflow menu is used to display a list of multiple controls when horizontal
 Text toolbars can be used to save or send text files. Text files can also be saved as drafts to be edited again at a later date.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 ![Saving a text file.](/images/text-toolbar-save.png)
 
