update: mike and josh review edits

--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -121,7 +121,17 @@ The text color and paragraph alignment controls open a menu that displays differ
 
 ### Attach files
 
-The user can upload and attach a file from their computer. Once a file has been chosen, the file will load in the bottom left of the text area. A file can be removed by clicking the close `x` icon.
+The user can upload and attach a file from their computer.
+
+<Row>
+<Column colLg={8}>
+
+![Hover on "Attachment" button.](/images/text-toolbar-attachment-hover.png)
+
+</Column>
+</Row>
+
+Once a file has been chosen, the file will load in the bottom left of the text area. A file can be removed by clicking the close `x` icon.
 
 <Row>
 <Column colLg={8}>
@@ -208,7 +218,7 @@ The overflow menu is used to display a list of multiple controls when horizontal
 
 ### Saving
 
-Text toolbars can be used to save or send text files. Text files can also be saved as drafts to be edited again at a later date.
+Text toolbars can be used to save or send text files. Text files can also be saved as drafts to be edited again at a later date. Drafts can be saved with an explicit "Save draft" button or it can autosave depending on the use case.
 
 <Row>
 <Column colLg={12}>
@@ -222,7 +232,7 @@ Text toolbars can be used to save or send text files. Text files can also be sav
 
 ### Tooltips
 
-Buttons that complete an action upon click receive tooltips on hover.
+Buttons that complete an action upon click receive tooltips on hover and focus.
 
 <Row>
 <Column colLg={8}>
