--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -475,7 +475,7 @@ For consistency, see Carbon’s [content guidelines](guidelines/content/overview
   </DoDont>
 </DoDontRow>
 
-## Behavior
+## Behaviors
 
 ### Interaction
 
