--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -510,7 +510,7 @@ Icons can be placed next to labels to both clarify an action and call attention 
 <DoDontRow>
   <DoDont caption="Do place icon on the right side of the button after the text.">
 
-![Do place icon on the right side of the button after the text](images/button_usage_28.png)
+![Do place the icon on the right side of the button after the text](images/button_usage_28.png)
 
   </DoDont>
   <DoDont type="dont" caption="Do not place the icon on the left side of the button before the text.">
