--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -520,7 +520,7 @@ Icons can be placed next to labels to both clarify an action and call attention 
   </DoDont>
 </DoDontRow>
 
-### Icon only buttons
+### Icon-only buttons
 
 Icon buttons allow users to take actions, and make choices, with a single tap. Icon buttons can take the form of any of the five types above but most commonly will be styled as primary or ghost buttons.
 
