--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -527,7 +527,7 @@ Icon buttons allow users to take actions, and make choices, with a single tap. I
 <Row>
 <Column colLg={8}>
 
-![Example of an icon only ghost button in a data table](images/button_usage_30.png)
+![Example of an icon-only ghost button in a data table](images/button_usage_30.png)
 
 <Caption>Example of an icon only ghost button in a data table</Caption>
 
