--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -529,7 +529,7 @@ Icon buttons allow users to take actions, and make choices, with a single tap. I
 
 ![Example of an icon-only ghost button in a data table](images/button_usage_30.png)
 
-<Caption>Example of an icon only ghost button in a data table</Caption>
+<Caption>Example of an icon-only ghost button in a data table</Caption>
 
 </Column>
 </Row>
