--- a/src/pages/community/domain-guidance.mdx
+++ b/src/pages/community/domain-guidance.mdx
@@ -48,8 +48,8 @@ _This content is accessible to IBMers only._
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Watson IoT Design"
-    href="https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/"
+    subTitle="AI Applications Design"
+    href="https://pages.github.ibm.com/ai-applications/design/"
     >
 
 ![IoT icon](images/watson.svg)
