--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -30,7 +30,7 @@ Buttons are clickable elements that are used to trigger actions. They communicat
 
 #### When to use
 
-Use buttons to communicate actions users can take and allow them to interact with the page. Each page should have one primary button, and any remaining calls to action should be represented as lower emphasis buttons.
+Use buttons to communicate actions users can take to allow them to interact with the page. Each page should have one primary button, and any remaining calls to action should be represented as lower emphasis buttons.
 
 #### When not to use
 
@@ -50,7 +50,7 @@ Do not use buttons as navigational elements. Instead, use [links](https://www.ca
 | ----------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | _Primary_   | For the principal call to action on the page. Primary buttons should only appear once per screen (not including the application header or in a modal dialog). |
 | _Secondary_ | For secondary actions on each page; these can only be used  in conjunction with a primary button.                                                             |
-| _Tertiary_  | For less prominent actions; tertiary buttons can be used in isolation  or paired with a primary button when there are multiple calls to action.                 |
+| _Tertiary_  | For less prominent actions; tertiary buttons can be used in isolation  or paired with a primary button when there are multiple calls to action.               |
 | _Danger_    | For actions that could have destructive effects on the user’s data  (delete, remove, etc.).                                                                   |
 | _Ghost_     | For the least pronounced actions; often used in conjunction with primary buttons.                                                                             |
 
