--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -30,7 +30,7 @@ Buttons are clickable elements that are used to trigger actions. They communicat
 
 #### When to use
 
-Use buttons to communicate actions users can take to allow them to interact with the page. Each page should have one primary button, and any remaining calls to action should be represented as lower emphasis buttons.
+Use buttons to communicate actions users can take to allow users to interact with the page. Each page should have one primary button, and any remaining calls to action should be represented as lower emphasis buttons.
 
 #### When not to use
 
