--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -52,7 +52,7 @@ Do not use buttons as navigational elements. Instead, use [links](https://www.ca
 | _Secondary_ | For secondary actions on each page; these can only be used  in conjunction with a primary button.                                                             |
 | _Tertiary_  | For less prominent actions; tertiary buttons can be used in isolation  or paired with a primary button when there are multiple calls to action.               |
 | _Danger_    | For actions that could have destructive effects on the user’s data  (delete, remove, etc.).                                                                   |
-| _Ghost_     | For the least pronounced actions; often used in conjunction with primary buttons.                                                                             |
+| _Ghost_     | For the least pronounced actions; often used in conjunction with a primary button.                                                                             |
 
 import { Add16 } from "@carbon/icons-react";
 
