--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -136,7 +136,7 @@ import { Add16 } from "@carbon/icons-react";
 
 ### Anatomy
 
-A button’s text label is the most important element on a button, as it communicates the action that will be performed when the user touches it. In a contained button the text is always left-aligned, not centered. By default Carbon uses sentence case for all button labels.
+A button’s text label is the most important element on a button, as it communicates the action that will be performed when the user interacts with it. In a contained button the text is always left-aligned, not centered. By default Carbon uses sentence case for all button labels.
 
 If a text label is not used, an icon should be present to signify what the button does.
 
