--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -182,7 +182,7 @@ C. Icon
 <DoDontRow>
   <DoDont caption="Do left-align text in a button, even if the buttons is wide.">
 
-![Do left-align text in a button, even if the buttons is wide.](images/button_usage_5.png)
+![Do left-align text in a button, even if the button is wide.](images/button_usage_5.png)
 
   </DoDont>
   <DoDont type="dont" caption="Do not center text in a button, even if the button is wide.">
