--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -180,7 +180,7 @@ C. Icon
 </Row>
 
 <DoDontRow>
-  <DoDont caption="Do left-align text in a button, even if the buttons is wide.">
+  <DoDont caption="Do left-align text in a button, even if the button is wide.">
 
 ![Do left-align text in a button, even if the button is wide.](images/button_usage_5.png)
 
