--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -234,7 +234,7 @@ Although secondary buttons have less visual prominence because they are less sat
 </Row>
 
 <DoDontRow>
-  <DoDont caption="Do use high emphasis and medium emphasis buttons in a button group.">
+  <DoDont caption="Do use high-emphasis and medium-emphasis buttons in a button group.">
 
 ![Do use high emphasis and medium emphasis buttons in a button group.](images/button_usage_8_test.png)
 
