--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -236,7 +236,7 @@ Although secondary buttons have less visual prominence because they are less sat
 <DoDontRow>
   <DoDont caption="Do use high-emphasis and medium-emphasis buttons in a button group.">
 
-![Do use high emphasis and medium emphasis buttons in a button group.](images/button_usage_8_test.png)
+![Do use high-emphasis and medium-emphasis buttons in a button group.](images/button_usage_8_test.png)
 
   </DoDont>
   <DoDont type="dont" caption="Do not center text in a button, even if the button is wide.">
