--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -254,7 +254,7 @@ As a general rule, on full-page designs, the primary button is on the left side 
 
 In some cases a button group—or even a single button in the case of a side panel or small tile—may span the entire width of a window or container. Typical nested button locations include:
 
-- Banner CTAs
+- Banner calls to action
 - Dialog windows
 - Wizards
 - Forms
