--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -271,7 +271,7 @@ In some cases a button group—or even a single button in the case of a side pan
 
 | Alignment         | Use case                                                                                                           |
 | ----------------- | ------------------------------------------------------------------------------------------------------------------ |
-| _Left-justified_  | Banner call-to-actions, in-page forms and nested buttons in components like tiles                                  |
+| _Left-justified_  | Banner call to actions, in-page forms, and nested buttons in components like tiles                                  |
 | _Right-justified_ | Inline notifications, inline field buttons and  data tables, progressive forms, wizards and single-button diaglogs |
 | _Full span_       | Dialogs, side panels and small tiles (optional treatment)                                                          |
 
