--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -275,7 +275,7 @@ In some cases a button group—or even a single button in the case of a side pan
 | _Right-justified_ | Inline notifications, inline field buttons and  data tables, progressive forms, wizards, and single-button dialogs |
 | _Full span_       | Dialogs, side panels, and small tiles (optional treatment)                                                          |
 
-#### Fluid vs. fixed buttons
+#### Fluid versus fixed buttons
 
 Button alignment is also closely related to whether the button is treated as a fixed or a fluid element within a layout. When we say “fluid,” we mean that the button becomes a part of a larger, compound component by bleeding to two or more edges of its container. Rather than defining the a fluid button’s width in columns or mini units, it’s width is defined as a percentage (often 50%) of the container’s width. Also, as a general rule, fluid buttons are never left-aligned in a layout or a container — they’re always either right-aligned, or span the full width of the container.
 
