--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -294,7 +294,7 @@ Fluid components like button never exist in isolation. As you can see in the exa
 </Row>
 
 <DoDontRow>
-  <DoDont caption="Do bleed ghost button hovers when they are paired with a other fluid buttons.">
+  <DoDont caption="Do bleed ghost button hovers when they are paired with other fluid buttons.">
 
 ![Do bleed ghost button hovers when they are paired with a other fluid buttons.](images/button_usage_12.png)
 
