--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -287,7 +287,7 @@ Fluid components like button never exist in isolation. As you can see in the exa
 ![Example of a fluid input field and fluid button](images/button_usage_11.png)
 
 <Caption>
-  Example of a login screen using a fluid input field and a fluid buttons
+  Example of a login screen using a fluid input field and a fluid button
 </Caption>
 
 </Column>
