--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -357,7 +357,7 @@ As mentioned in the [Emphasis section](#Emphasis), you don’t necessarily need 
 ![Do use a primary and two of the same lower emphasis buttons in a button group.](images/button_usage_17.png)
 
   </DoDont>
-  <DoDont type="dont" caption="Do not mix primary, secondary and tertiary buttons in the same button group.">
+  <DoDont type="dont" caption="Do not mix primary, secondary, and tertiary buttons in the same button group.">
 
 ![Do not mix primary, secondary and tertiary buttons in the same button group.](images/button_usage_18.png)
 
