--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -508,7 +508,7 @@ Icons can be placed next to labels to both clarify an action and call attention 
 - Glyphs must be the same color value as the text within a button
 
 <DoDontRow>
-  <DoDont caption="Do place icon on the right side of the button after the text.">
+  <DoDont caption="Do place the icon on the right side of the button after the text.">
 
 ![Do place the icon on the right side of the button after the text](images/button_usage_28.png)
 
