--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -359,7 +359,7 @@ As mentioned in the [Emphasis section](#Emphasis), you don’t necessarily need 
   </DoDont>
   <DoDont type="dont" caption="Do not mix primary, secondary, and tertiary buttons in the same button group.">
 
-![Do not mix primary, secondary and tertiary buttons in the same button group.](images/button_usage_18.png)
+![Do not mix primary, secondary, and tertiary buttons in the same button group.](images/button_usage_18.png)
 
   </DoDont>
 </DoDontRow>
