--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -458,7 +458,7 @@ A button’s text label is the most important element on a button, as it communi
 
 Button labels should clearly indicate the action of the button. To provide enough context, use the {verb} + {noun} content formula on buttons except in the case of common actions like “Done”, “Close”, “Cancel”, “Add”, or “Delete.”
 
-There are exceptions to this rule for situations in which button length can cause problems in compact UIs or negatively impact translation, but the {verb} + {noun} formula is still best practice.
+There are exceptions to this rule for situations in which button length could cause problems in compact UIs or negatively impact translation, but the {verb} + {noun} formula is still best practice.
 
 For consistency, see Carbon’s [content guidelines](guidelines/content/overview) for a list of recommended action labels.
 
