--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -477,7 +477,7 @@ For consistency, see Carbon’s [content guidelines](guidelines/content/overview
 
 ## Behaviors
 
-### Interaction
+### Interactions
 
 #### Mouse
 
