--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -499,7 +499,7 @@ NVDA: Users can trigger a button by pressing `Enter` or `Space` while the button
 
 ### Buttons with icons
 
-Icons can be placed next to labels to both clarify an action and call attention to a button. There are certain instances where and icon will suffice in place of a text label, but use icon buttons cautiously.
+Icons can be placed next to labels to both clarify an action and call attention to a button. There are certain instances where an icon will suffice in place of a text label, but use icon buttons cautiously.
 
 - Use glyphs (16px) within buttons
 - Glyphs are distinguished by their solid shape and knocked-out details
