--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -7,7 +7,7 @@ import OverviewCard from "components/OverviewCard";
 
 <PageDescription>
 
-Start by identifying the purpose of the visualization and choose a chart type appropriately.
+Start by identifying the purpose of the visualization and then choose the appropriate chart type.
 
 </PageDescription>
 
