--- a/src/pages/data-visualization/basic-charts/index.mdx
+++ b/src/pages/data-visualization/basic-charts/index.mdx
@@ -11,7 +11,7 @@ Basic charts offer a way to visualize data sets in an intuitive, easy to underst
 
 import "@carbon/charts/styles.css";
 
-import { demoGroups } from "@carbon/charts/demo/data";
+import demoGroups from "../../../data/data-visualization";
 
 import { AnchorLinks, AnchorLink } from "gatsby-theme-carbon";
 import AllDemos from "../../../components/data-visualization/AllDemos.js";
